12/13/2006 - jdiamond

 * (trac #89) Add support for GUI themes

12/12/2006 - jdiamond
=====================

 * (trac #154) Translations are now stored in individual files (in the 'language' folder) rather than one large file

12/11/2006 - jdiamond
=====================

 * (trac #77) Implemented a dynamic tree menu for the left side-bar menu in the manager interface using the dhtmlxTree project

12/9/2006 - jdiamond
=====================

 * Converted the DBConnection class to a singleton and removed the global $DB from the namespace

12/7/2006 - jdiamond
=====================

 * (trac #150) Implemented control panel module support and a basic module for cPanel.
 * Numerous changes to the order interface that were necessary for integrating with control panel's.
 * (trac #119) New (client) users are now created along with new accounts.
 * (trac #67) It is now possible to edit hosting service purchases.

11/26/2006 - jdiamond
=====================

 * (trac #143) Applied another CSS patch provided by Eminos to the order interface templates
 * (trac #128) Added per-product custom term lengths and pricing.
 * (trac #130) Implemented custom invoice periods.

11/15/2006 - jdiamond
=====================

 * (trac #143) Applied Eminos' CSS patch to the order interface templates
 * (trac #151) Coded a module for the Enom registrar API
 * Added exceptions-based error handeling for the modules implementation

11/9/2006 - jdiamond
=====================

 * (trac #148) Implemented searching for {form_table}'s

11/6/2006 - jdiamond
=====================

 * (trac #147) Revamped and replaced the {dbo_table} with a new Table widget class.  Tables are now more
               flexable and can be sorted on all columns.

11/2/2006 - jdiamond
=====================

 * (trac #114) Added whois support to the NullRegistrar module using the Whois class 
               from the phpWhois project (http://www.phpwhois.org)

10/30/2006 - jdiamond
=====================
