@@ -957,6 +957,10 @@
                required="true"
                max_length="32"
                min_length="3"/>
+        <field name="theme"
+               widget="themeselect"
+               validator="theme"
+               description="[THEME]"/>
         <field name="continue"
                widget="submit"
                validator="submit"
@@ -3274,6 +3278,11 @@
                description="[LANGUAGE_PREFERENCE]"
                validator="language"
                required="true"/>
+        <field name="theme"
+               widget="themeselect"
+               description="[THEME_PREFERENCE]"
+               validator="theme"
+               required="true"/>
       </fields>
     </form>
 
@@ -3308,6 +3317,11 @@
                widget="languageselect"
                description="[LANGUAGE_PREFERENCE]"
                validator="language"
+               required="true"/>
+        <field name="theme"
+               widget="themeselect"
+               description="[THEME_PREFERENCE]"
+               validator="theme"
                required="true"/>
         <field name="type"
                widget="select"
