@@ -208,6 +208,7 @@
     <phrase id="LAST_NAME">Last Name</phrase>
     <phrase id="LANGUAGE">Language</phrase>
     <phrase id="LANGUAGE_PREFERENCE">Language Preference</phrase>
+    <phrase id="LEAVE_BLANK_TO_USE_YOUR_DEFAULT_THEME">Leave blank to use your default theme</phrase>
     <phrase id="LOCALE">Locale</phrase>
     <phrase id="LOCATION">Location</phrase>
     <phrase id="LOG">Log</phrase>
@@ -364,6 +365,8 @@
     <phrase id="TERM_LENGTH">Term Length</phrase>
     <phrase id="TERMLENGTH_FOR_ONETIME_MUST_BE_ZERO">The term length for a onetime price must be zero</phrase>
     <phrase id="TERMS_DAYS">Terms (days)</phrase>
+    <phrase id="THEME">Theme</phrase>
+    <phrase id="THEME_PREFERENCE">Theme Preference</phrase>
     <phrase id="THEMES">Themes</phrase>
     <phrase id="THERE_ARE_NO_GATEWAY_MODULES">There are no payment gateway modules enabled.</phrase>
     <phrase id="THERE_ARE_NO_HOSTING_SERVICES">There are no hosting services configured.</phrase>
