@@ -22,6 +22,10 @@
         <p>{echo phrase="PASSWORD"}:</p>
         {form_element field="password" size="40"}<br/>
 
+        <p>[THEME]:</p>
+        {form_element field="theme" nulloption="true"} <br/>
+	<small>([LEAVE_BLANK_TO_USE_YOUR_DEFAULT_THEME])</small><br/>
+
         <br/>{form_element field="continue"}
 
       {/form}
