@@ -1,0 +1,11 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+  <head>
+  </head>
+
+  <frameset cols="*" framespacing="0" name="mainFrameSet">
+    <frame src="manager_content.php" name="content"/>
+  </frameset>
+
+</html>
